# csvsqldb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  LICENSE  README.md  Roadmap.md  _clang-format  coverage.sh  csvsqldb.cfg  format_all.sh  install.md  llvm-gcov.sh
.github/workflows/: build_cmake.yml
apps/: CMakeLists.txt
apps/csvsqldb/: CMakeLists.txt  console.cpp  console.h  main.cpp
cmake/: fetch_ctre.cmake  fetch_fast_float.cmake  fetch_lua.cmake  fetch_reflex.cmake
compat/: get_time.h  put_time.h  regex.h
csvsqldb/: CMakeLists.txt  aggregation_functions.cpp  aggregation_functions.h  block.cpp  block.h  block_iterator.cpp  block_iterator.h  block_producer.cpp  block_producer.h  buildin_functions.cpp  buildin_functions.h  console.cpp  console.h  data_provider.cpp  data_provider.h  database.cpp  database.h  execution_engine.h  execution_plan.h  execution_plan_creator.cpp  execution_plan_creator.h  file_mapping.cpp  file_mapping.h  function_registry.cpp  function_registry.h  inc.h  lex.yy.cpp  lex.yy.h  lexer.l  lexer.md  main.cpp  operatornode.cpp  operatornode.h  operatornode_factory.cpp  operatornode_factory.h  out.txt  sql_ast.h  sql_astdump.h  sql_astexpressionvisitor.h  sql_lexer  (+28 more)
csvsqldb/base/: application.h  arithmetic_types.h  configuration.h  csv_parser.cpp  csv_parser.h  csv_string_parser.cpp  csv_string_parser.h  date.cpp  date.h  dategenerators.cpp  dategenerators.h  datetime.cpp  datetime.h  default_configuration.cpp  default_configuration.h  duration.cpp  duration.h  exception.cpp  exception.h  float_helper.h  function_traits.h  glob.h  global_configuration.cpp  global_configuration.h  hash_helper.h  lexer.cpp  lexer.h  log_devices.h  logging.cpp  logging.h  lua_configuration.cpp  lua_configuration.h  lua_engine.h  pragma_conversion.h  pragma_non_virtual_dtor.h  pragma_old_style_cast.h  pragma_pop.h  pragma_push.h  pragma_shadow.h  pragma_sign.h  (+19 more)
csvsqldb/base/detail/: types_detail.h
csvsqldb/base/detail/posix/: glob.cpp  signalhandler.cpp
csvsqldb/base/detail/windows/: signalhandler.cpp
csvsqldb/compat/: get_time.h  put_time.h  time_api.h
csvsqldb/operatornodes/: aggregation_operatornode.cpp  aggregation_operatornode.h  cross_join_operatornode.cpp  cross_join_operatornode.h  extended_projection_operatornode.cpp  extended_projection_operatornode.h  grouping_operatornode.cpp  grouping_operatornode.h  inner_hash_join_operatornode.cpp  inner_hash_join_operatornode.h  inner_join_operatornode.cpp  inner_join_operatornode.h  limit_operatornode.cpp  limit_operatornode.h  output_row_operatornode.cpp  output_row_operatornode.h  scan_operatornode.cpp  scan_operatornode.h  select_operatornode.cpp  select_operatornode.h  sort_operatornode.cpp  sort_operatornode.h  systemtable_scan_operatornode.cpp  systemtable_scan_operatornode.h  table_scan_operatornode.cpp  table_scan_operatornode.h  union_operatornode.cpp  union_operatornode.h
libcsvsqldb/: CMakeLists.txt  aggregation_functions.cpp  aggregation_functions.h  block.cpp  block.h  block_iterator.cpp  block_iterator.h  buildin_functions.cpp  buildin_functions.h  database.cpp  database.h  execution_engine.cpp  execution_engine.h  execution_plan.cpp  execution_plan.h  execution_plan_creator.cpp  execution_plan_creator.h  file_mapping.cpp  file_mapping.h  function_registry.cpp  function_registry.h  inc.h  operatornode.cpp  operatornode.h  operatornode_factory.cpp  operatornode_factory.h  sql_ast.h  sql_astdump.h  sql_astexpressionvisitor.h  sql_lexer.cpp  sql_lexer.h  sql_parser.cpp  sql_parser.h  stack_machine.cpp  stack_machine.h  symboltable.cpp  symboltable.h  table_executions.cpp  table_executions.h  tabledata.cpp  (+13 more)
libcsvsqldb/base/: any.h  application.cpp  application.h  arithmetic_types.h  configuration.cpp  configuration.h  csv_parser.cpp  csv_parser.h  csv_string_parser.cpp  csv_string_parser.h  date.cpp  date.h  dategenerators.cpp  dategenerators.h  datetime.cpp  datetime.h  decimal.h  default_configuration.cpp  default_configuration.h  duration.cpp  duration.h  exception.cpp  exception.h  float_helper.cpp  float_helper.h  function_traits.h  glob.h  global_configuration.cpp  global_configuration.h  hash_helper.h  json.h  json_object.cpp  json_object.h  json_parser.cpp  json_parser.h  lexer.cpp  lexer.h  log_devices.cpp  log_devices.h  logging.cpp  (+26 more)
libcsvsqldb/base/detail/: types_detail.h
libcsvsqldb/base/detail/posix/: glob.cpp  signalhandler.cpp
libcsvsqldb/base/detail/windows/: glob.cpp  signalhandler.cpp
libcsvsqldb/compat/: get_time.h  put_time.h  regex.h
manual/: csvsqldb_manual.sty  csvsqldb_manual.tex  extendedbacknaur.sty
manual/examples/: create_example_mappings.sql  create_example_tables.sql  easy_example_queries.sql  grouping_ordering.sql  grouping_ordering_example_queries.sql  join_example_queries.sql
manual/sections/: 0_title.tex  11_bibliography.tex  (+6 more)
sandbox/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  aggregation_functions_test.cpp  aggregation_operatornode_test.cpp  aggregation_test.cpp  any_test.cpp  application_test.cpp  ast_dump_visitor_test.cpp  block_iterator_test.cpp  block_manager_test.cpp  block_producer_test.cpp  block_provider_test.cpp  block_test.cpp  blockmanager_test.cpp  buildin_functions_test.cpp  configuration_test.cpp  create_test_data.sql  csv_parser_test.cpp  csv_string_parser_test.cpp  data_framework_test.cpp  data_test_framework.h  database_provider_test.cpp  database_system_test.cpp  database_test.cpp  date_test.cpp  duration_test.cpp  exception_test.cpp  execution_engine_test.cpp  execution_plan_creator_test.cpp  execution_plan_test.cpp  file_mapping_test.cpp  glob_test.cpp  groupby_test.cpp  join_test.cpp  json_test.cpp  lexer_test.cpp  limit_test.cpp  logging_test.cpp  luaengine_test.cpp  main.cpp  null_operation_test.cpp  (+47 more)
test/detail/posix/: test_helper.h
test/detail/windows/: test_helper.h
test/operatornodes/: aggregation_operatornode_test.cpp  operatornode_test.cpp  operatornode_test_fixture.h  scan_operator_node_mock.h
test/testdata/csv/: test.csv
test/testdata/luaengine/: properties.lua  test.lua
